# eval

./: .gitignore  LICENSE  README.md  compose.yaml  docker-compose.yml
app/: Dockerfile  main.py  process_data.py  pyproject.toml  test.py
app/migrations/: env.py
app/migrations/versions/: 613265a13c87_update_confidenceinterval.py  812a44854625_update_confidenceinterval.py
app/models/: __init__.py  archive.py  chesscom.py  functions.py  game.py  lichess.py  match.py  player.py
nginx/: config.conf
python/: api.Dockerfile  api_main.py  calculate.Dockerfile  calculate_main.py  loader.Dockerfile  loader_main.py  pyproject.toml
python/app/: __init__.py
python/app/chesscom/: __init__.py
python/models/: __init__.py  archive.py  chesscom.py  functions.py  game.py  lichess.py  match.py  opening.py  player.py  system.py  time_control.py
