[tool.poetry]
name = "chess-ratings"
version = "0.1.0"
description = ""
authors = ["Michael Piccirillo <70709374+Khrysys@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
sqlmodel = "^0.0.19"
requests = "^2.32.3"
psycopg = {extras = ["binary"], version = "^3.2.1"}
chess = "^1.10.0"
scipy = "^1.14.0"
numpy = "^2.0.0"

[tool.poetry.group.api.dependencies]
fastapi = "^0.111.1"
uvicorn = {extras = ["standard"], version = "^0.30.1"}

[tool.poetry.group.loader.dependencies]
matplotlib = "^3.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
